Alterando mensagem operacao de debito

--- a/WebContent/withdrawal.xhtml
+++ b/WebContent/withdrawal.xhtml
@@ -10,6 +10,6 @@
     </h:head>
          
     <h:body>
-        Sacado R$<h:outputText value="#{bank.amountW}"/> na conta num:<h:outputText value="#{bank.accountIdW}"/>.
+        Débito no valor de R$<h:outputText value="#{bank.amountW}"/> para a conta num:<h:outputText value="#{bank.accountIdW}"/> realizado com sucesso.
     </h:body>
 </html>
