Alterando mensagem de operacao de transferencia

--- a/WebContent/transfer.xhtml
+++ b/WebContent/transfer.xhtml
@@ -11,7 +11,7 @@
          
     <h:body>
         <h:form>
-        Transferido R$<h:outputText value="#{bank.amount}"/> da conta <h:outputText value="#{bank.accTransfFromId}"/> para a conta <h:outputText value="#{bank.accTransfToId}"/>.
+        Transferência no valor R$<h:outputText value="#{bank.amount}"/> da conta <h:outputText value="#{bank.accTransfFromId}"/> para a conta <h:outputText value="#{bank.accTransfToId}"/> realizado com sucesso.
         </h:form>
     </h:body>
 </html>
