Alterando mensagem da operação de crédito para adicionar bônus na mensagem.

--- a/WebContent/deposit.xhtml
+++ b/WebContent/deposit.xhtml
@@ -12,6 +12,7 @@
     <h:body>
         <h:form>
         Crédito no valor R$<h:outputText value="#{bank.amountD}"/> para a conta <h:outputText value="#{bank.accountIdD}"/> realizado com sucesso.
+        Bônus de <h:outputText value="#{bank.bonusB}"/> creditado.
         </h:form>
     </h:body>
 </html>
