--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -26,6 +26,9 @@
 				<h:commandButton value="Depositar" title="Depositar" action="#{bank.deposit}"/><br/><br/>
 
 			<b>Sacar</b><br/>
+			
+			- Essa operação adiciona o valor especificado ao saldo da conta que você escolher!
+			
 				ID da Conta: <h:inputText id="accountIdW" value="#{bank.accountIdW}"/><br/>
 				Valor em R$: <h:inputText id="amountW" value="#{bank.amountW}"/><br/>
 				<h:commandButton value="Sacar" title="Sacar" action="#{bank.withdrawal}"/><br/><br/>
